[package]
name = "euca"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.29"
log = "0.4"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "Text",
    "HtmlElement",
    "CharacterData",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMenuItemElement",
    "HtmlFieldSetElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlStyleElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.29"
