[package]
name = "euca"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
log = "0.4"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "d95ce1a2930f2385d4f3765d061dbeff3503107f", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "InputEvent",
    "Text",
    "HtmlElement",
    "CharacterData",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMenuItemElement",
    "HtmlFieldSetElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlStyleElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
console_log = "0.1"

[dev-dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "InputEvent",
    "Text",
    "HtmlElement",
    "CharacterData",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMenuItemElement",
    "HtmlFieldSetElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlStyleElement",
    "HtmlCollection",
]
