[package]
name = "euca"
description = "A Rust WASM front end web framework."
repository = "https://github.com/iamcodemaker/euca"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
documentation = "https://docs.rs/euca"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
log = "0.4"

[dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "InputEvent",
    "Text",
    "HtmlElement",
    "CharacterData",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMenuItemElement",
    "HtmlFieldSetElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlStyleElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
console_log = "0.1"

[dev-dependencies.web-sys]
version = "0.3.6"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "Event",
    "EventTarget",
    "InputEvent",
    "Text",
    "HtmlElement",
    "CharacterData",
    "HtmlInputElement",
    "HtmlOptionElement",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlMenuItemElement",
    "HtmlFieldSetElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlStyleElement",
    "HtmlCollection",
]
