[package]
name = "counter"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.29"
cfg-if = "0.1"

euca = { path = "../../" }
log = "0.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# The `console_log` crate routes our logging messages to the browser's console,
# but pulls in `std::fmt` adding to the total code size. We make it optional
# here.
console_log = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[features]
default = ["console_error_panic_hook", "console_log"]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
