[package]
name = "todomvc"
version = "0.1.0"
authors = ["Matthew Nicholson <matt@matt-land.com>"]
description = "Euca • TodoMVC"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
log = "0.4"
cfg-if = "0.1"
console_error_panic_hook = { version = "0.1.5", optional = true }
console_log = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
euca = { path = "../../" }

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Window',
  'KeyboardEvent',
  'History',
  'Storage',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
